samples/_failures_safe/1761537635_ea8294_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13452ef2.c: In function ‘main’:
./samples/SAFE/__tmp_13452ef2.c:160:13: error: expected ‘:’ or ‘...’ at end of input
  160 |             case 1
      |             ^~~~
./samples/SAFE/__tmp_13452ef2.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13452ef2.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13452ef2.c:160:13: error: expected declaration or statement at end of input
